--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
             try {
                 console.log('Sending request to backend...');
-                const response = await fetch(' https://5bf8-174-114-78-26.ngrok-free.app/recognize-digit', {
+                const response = await fetch(' https://https://9b00-174-114-78-26.ngrok-free.app/recognize-digit', {
                     method: 'POST',
                     body: formData
                 });
